[gd_scene load_steps=5 format=3 uid="uid://dje3qbuca72c8"]

[ext_resource type="Texture2D" uid="uid://dts33o5jeyr3v" path="res://Art/2D icon.png" id="1_op2r1"]
[ext_resource type="Script" path="res://Scripts/npc.gd" id="1_svvrr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pm0s4"]
size = Vector2(24.75, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fwl32"]
size = Vector2(45.75, 25)

[node name="npc" type="StaticBody2D"]
scale = Vector2(4, 4)
script = ExtResource("1_svvrr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.37091e-06, -4.47035e-07)
scale = Vector2(1.5625, 1.5)
texture = ExtResource("1_op2r1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.125, 1.19209e-07)
shape = SubResource("RectangleShape2D_pm0s4")

[node name="quest_container" type="PanelContainer" parent="."]
visible = false
offset_left = -68.0
offset_top = -54.0
offset_right = 56.0
offset_bottom = -10.0

[node name="text" type="Label" parent="quest_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Quest: Hit the button.
Do you accept?"

[node name="yes_button" type="Button" parent="quest_container/text"]
layout_mode = 2
offset_left = 73.0
offset_top = 12.0
offset_right = 98.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Yes"

[node name="no_button" type="Button" parent="quest_container/text"]
layout_mode = 0
offset_left = 99.0
offset_top = 13.0
offset_right = 121.0
offset_bottom = 35.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "No"

[node name="finish_button" type="Button" parent="quest_container/text"]
visible = false
layout_mode = 0
offset_left = 78.75
offset_top = 12.25
offset_right = 115.75
offset_bottom = 35.25
theme_override_font_sizes/font_size = 10
text = "Finish"

[node name="detect_area" type="Area2D" parent="."]
position = Vector2(31, -35)

[node name="collision_area" type="CollisionShape2D" parent="detect_area"]
position = Vector2(-31.125, 34.5)
shape = SubResource("RectangleShape2D_fwl32")
debug_color = Color(0.843137, 0.356863, 0.364706, 0.419608)

[connection signal="pressed" from="quest_container/text/yes_button" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="quest_container/text/no_button" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="quest_container/text/finish_button" to="." method="_on_finish_button_pressed"]
[connection signal="body_entered" from="detect_area" to="." method="_on_detect_area_body_entered"]
[connection signal="body_exited" from="detect_area" to="." method="_on_detect_area_body_exited"]
